--- a/src/cancelacion.html
+++ b/src/cancelacion.html
@@ -2,7 +2,7 @@
 
     <head>
         
-        <title>Technology - BBC News</title>
+        <title>Cancelar</title>
     
         <style type="text/css"> 
 
