--- a/src/reservaDinamica.html
+++ b/src/reservaDinamica.html
@@ -2,7 +2,7 @@
 
     <head>
         
-        <title>Technology - BBC News</title>
+        <title>Reserva dinamica</title>
     
         <style type="text/css"> 
 
@@ -299,7 +299,7 @@
 		</form> 
            </div>
            <div class = "new_line">
-           <form>
+           <form action="/seleccionarInvitados" method="get">
               <button class = "btn default btn-menu" type="submit">Seleccionar invitados</button> 
           </form> 
          </div>
